# OxygenRender

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh
include/OxygenRender/: Buffer.h  Camera.h  Chart.h  EventSystem.h  FileManager.h  Graphics2D.h  Graphics3D.h  GraphicsTypes.h  Mesh.h  Model.h  OpenGLBuffers.h  OxygenMathLite.h  OxygenRender.h  Renderer.h  ResourcesManager.h  Shader.h  Skybox.h  Texture.h  Time.h  Timer.h  Window.h
shaders/: fragment.frag  model_fragment.frag  model_vertex.vert
shaders/graphics2d/: texture_fragment.frag  texture_vertex.vert  vertex.vert
shaders/graphics3d/: fragment.frag  vertex.vert
src/core/: Buffer.cpp  Camera.cpp  EventSystem.cpp  Mesh.cpp  Model.cpp  OpenGLBuffers.cpp  Renderer.cpp  Shader.cpp  Skybox.cpp  Texture.cpp  Window.cpp
src/graphics/: Graphics2D.cpp  Graphics3D.cpp
src/utils/: Time.cpp  Timer.cpp
tests/: CustomShader2d.h  Graph2D.h  Graph3D.h  Texture2DTest.h  backpack.h  light_box.h  main.cpp  simple2D.h
